sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:12: error: not enough arguments for method plusPetit: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
    if(!plusPetit(getNombreValeurs()-i-1 to getNombreValeurs()-i)){
                 ^